--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="sync_header">Sync</string>
 
     <!-- Messages Preferences -->
-    <string name="signature_title">Username</string>
+    <string name="signature_title">User Profile</string>
     <string name="reply_title">Default reply action</string>
 
     <!-- Sync Preferences -->
